--- a/JadeNativeScriptProcessor/JadeNativeScriptProcessor.csproj
+++ b/JadeNativeScriptProcessor/JadeNativeScriptProcessor.csproj
@@ -5,11 +5,11 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x64</Platform>
     <ProjectGuid>{B55F8913-2122-BD9D-6AD2-4B2AD6D3957B}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>JadeNativeScriptProcessor</RootNamespace>
     <AssemblyName>JadeNativeScriptProcessor</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
@@ -24,7 +24,6 @@
     <DefineConstants></DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x64' ">
     <PlatformTarget>x64</PlatformTarget>
@@ -36,7 +35,6 @@
     <DefineConstants></DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Dist|x64' ">
     <PlatformTarget>x64</PlatformTarget>
@@ -48,11 +46,18 @@
     <DefineConstants></DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="src\Parser.cs" />
+    <Compile Include="src\PremakeGenerator.cs" />
+    <Compile Include="src\Program.cs" />
+    <Compile Include="src\Scanner.cs" />
+    <Compile Include="src\Token.cs" />
+    <Compile Include="src\UClass.cs" />
+    <Compile Include="src\UStruct.cs" />
+    <Compile Include="src\UVariable.cs" />
   </ItemGroup>
   <ItemGroup>
   </ItemGroup>
@@ -64,4 +69,8 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <PropertyGroup>
+    <PostBuildEvent>copy /y "$(SolutionDir)/bin/Debug-windows-x86_64/$(ProjectName)\JadeNativeScriptProcessor.exe" "$(SolutionDir)/bin/Debug-windows-x86_64/JadeEditor\JadeNativeScriptProcessor.exe"
+xcopy /s /e /q /y /i "$(SolutionDir)/bin/Debug-windows-x86_64/$(ProjectName)\*.dll" "$(SolutionDir)/bin/Debug-windows-x86_64/JadeEditor\" &gt; nul</PostBuildEvent>
+  </PropertyGroup>
 </Project>
