--- a/JadeEditor/JadeEditor.vcxproj.filters
+++ b/JadeEditor/JadeEditor.vcxproj.filters
@@ -10,6 +10,9 @@
     <Filter Include="cpp\gui">
       <UniqueIdentifier>{5C26CDD5-C805-4C71-D11D-D7473D7CB2D2}</UniqueIdentifier>
     </Filter>
+    <Filter Include="cpp\nativeScripting">
+      <UniqueIdentifier>{5163F15C-BDC4-CE6A-4632-151DB292052A}</UniqueIdentifier>
+    </Filter>
     <Filter Include="cpp\util">
       <UniqueIdentifier>{559B798F-4168-D49A-6A81-C24256AD0929}</UniqueIdentifier>
     </Filter>
@@ -21,6 +24,9 @@
     </Filter>
     <Filter Include="include\gui">
       <UniqueIdentifier>{7DD7C031-E98C-3927-7281-33FEDE35302B}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="include\nativeScripting">
+      <UniqueIdentifier>{F2CD362E-5E05-7FC5-670F-E3E8D3C5A5BE}</UniqueIdentifier>
     </Filter>
     <Filter Include="include\util">
       <UniqueIdentifier>{9670E369-82D3-720E-2B59-ABC4179B3E91}</UniqueIdentifier>
@@ -42,7 +48,7 @@
     <ClInclude Include="include\JadeEditorApplication.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\LevelEditorScene.h">
+    <ClInclude Include="include\LevelEditorSceneInitializer.h">
       <Filter>include</Filter>
     </ClInclude>
     <ClInclude Include="include\LevelEditorSystem.h">
@@ -72,13 +78,21 @@
     <ClInclude Include="include\gui\ImGuiHeader.h">
       <Filter>include\gui</Filter>
     </ClInclude>
+    <ClInclude Include="include\nativeScripting\CodeGenerators.h">
+      <Filter>include\nativeScripting</Filter>
+    </ClInclude>
+    <ClInclude Include="include\nativeScripting\ScriptParser.h">
+      <Filter>include\nativeScripting</Filter>
+    </ClInclude>
+    <ClInclude Include="include\nativeScripting\ScriptScanner.h">
+      <Filter>include\nativeScripting</Filter>
+    </ClInclude>
+    <ClInclude Include="include\nativeScripting\SourceFileWatcher.h">
+      <Filter>include\nativeScripting</Filter>
+    </ClInclude>
     <ClInclude Include="include\util\Settings.h">
       <Filter>include\util</Filter>
     </ClInclude>
-    <ClInclude Include="include\nativeScripting\ScriptParser.h" />
-    <ClInclude Include="include\nativeScripting\ScriptScanner.h" />
-    <ClInclude Include="include\nativeScripting\SourceFileWatcher.h" />
-    <ClInclude Include="include\nativeScripting\CodeGenerators.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cpp\AssetWizard.cpp">
@@ -93,7 +107,7 @@
     <ClCompile Include="cpp\JadeEditorApplication.cpp">
       <Filter>cpp</Filter>
     </ClCompile>
-    <ClCompile Include="cpp\LevelEditorScene.cpp">
+    <ClCompile Include="cpp\LevelEditorSceneInitializer.cpp">
       <Filter>cpp</Filter>
     </ClCompile>
     <ClCompile Include="cpp\LevelEditorSystem.cpp">
@@ -120,11 +134,17 @@
     <ClCompile Include="cpp\gui\ImGuiExtended.cpp">
       <Filter>cpp\gui</Filter>
     </ClCompile>
+    <ClCompile Include="cpp\nativeScripting\ScriptParser.cpp">
+      <Filter>cpp\nativeScripting</Filter>
+    </ClCompile>
+    <ClCompile Include="cpp\nativeScripting\ScriptScanner.cpp">
+      <Filter>cpp\nativeScripting</Filter>
+    </ClCompile>
+    <ClCompile Include="cpp\nativeScripting\SourceFileWatcher.cpp">
+      <Filter>cpp\nativeScripting</Filter>
+    </ClCompile>
     <ClCompile Include="cpp\util\Settings.cpp">
       <Filter>cpp\util</Filter>
     </ClCompile>
-    <ClCompile Include="cpp\nativeScripting\ScriptScanner.cpp" />
-    <ClCompile Include="cpp\nativeScripting\ScriptParser.cpp" />
-    <ClCompile Include="cpp\nativeScripting\SourceFileWatcher.cpp" />
   </ItemGroup>
 </Project>
