--- a/JadeEditor/imgui.ini
+++ b/JadeEditor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1920,1061
+Size=3840,2035
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,19 +10,19 @@ Collapsed=0
 
 [Window][Game Viewport]
 Pos=0,40
-Size=1443,686
+Size=2888,1341
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Assets]
-Pos=0,728
-Size=1443,333
+Pos=0,1383
+Size=2888,652
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][ Scene]
-Pos=1445,1029
-Size=475,32
+Pos=2890,1392
+Size=950,643
 Collapsed=0
 DockId=0x00000008,0
 
@@ -42,18 +42,18 @@ Size=1083,522
 Collapsed=0
 
 [Window][Inspector]
-Pos=1445,40
-Size=475,987
+Pos=2890,40
+Size=950,1350
 Collapsed=0
 DockId=0x00000007,0
 
-[Window][Styles]
-Pos=60,60
-Size=142,224
+[Window][Gizmo debug]
+Pos=1548,1474
+Size=1149,484
 Collapsed=0
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=8,71 Size=1920,1021 Split=X
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,85 Size=3840,1995 Split=X
   DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=1443,722 Split=Y Selected=0xAE7BB42F
     DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1443,1341 Selected=0xAE7BB42F
     DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1443,652 Selected=0x7E7D78B8
