--- a/CocoaEditor/assets/default.ini
+++ b/CocoaEditor/assets/default.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1920,1080
+Size=2298,1080
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,19 +10,19 @@ Collapsed=0
 
 [Window][Game Viewport]
 Pos=0,40
-Size=1510,698
+Size=1807,698
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Assets]
 Pos=0,740
-Size=1510,340
+Size=1807,340
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][ Scene]
-Pos=1512,1048
-Size=408,32
+Pos=1809,1048
+Size=489,32
 Collapsed=0
 DockId=0x00000008,0
 
@@ -33,18 +33,18 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Create or Open Project]
-Pos=-14,16
+Pos=703,-149
 Size=1920,1080
 Collapsed=0
 
 [Window][Create New Project]
-Pos=293,225
+Pos=996,76
 Size=1083,522
 Collapsed=0
 
 [Window][Inspector]
-Pos=1512,40
-Size=408,1006
+Pos=1809,40
+Size=489,1006
 Collapsed=0
 DockId=0x00000007,0
 
@@ -54,7 +54,7 @@ Size=308,484
 Collapsed=0
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=956,195 Size=1920,1040 Split=X
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=1172,479 Size=2298,1040 Split=X
   DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=3021,722 Split=Y Selected=0xAE7BB42F
     DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1443,1341 Selected=0xAE7BB42F
     DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1443,652 Selected=0x7E7D78B8
