--- a/CocoaEditor/imgui.ini
+++ b/CocoaEditor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=3840,2035
+Size=1920,1080
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,19 +10,19 @@ Collapsed=0
 
 [Window][Game Viewport]
 Pos=0,40
-Size=3021,1341
+Size=1510,698
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Assets]
-Pos=0,1383
-Size=3021,652
+Pos=0,740
+Size=1510,340
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][ Scene]
-Pos=3023,1392
-Size=817,643
+Pos=1512,696
+Size=408,384
 Collapsed=0
 DockId=0x00000008,0
 
@@ -33,17 +33,19 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Create or Open Project]
+Pos=313,62
 Size=1920,1080
 Collapsed=0
 
 [Window][Create New Project]
-Pos=307,209
+ViewportPos=1830,381
+ViewportId=0x644D7B11
 Size=1083,522
 Collapsed=0
 
 [Window][Inspector]
-Pos=3023,40
-Size=817,1350
+Pos=1512,40
+Size=408,654
 Collapsed=0
 DockId=0x00000007,0
 
@@ -53,13 +55,13 @@ Size=308,484
 Collapsed=0
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,85 Size=3840,1995 Split=X
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=1147,407 Size=1920,1040 Split=X
   DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=3021,722 Split=Y Selected=0xAE7BB42F
     DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1443,1341 Selected=0xAE7BB42F
     DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1443,652 Selected=0x7E7D78B8
   DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=817,722 Split=Y Selected=0xA259292F
     DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=475,1048 Selected=0x57F8A5EA
     DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=475,945 Split=Y Selected=0xA259292F
-      DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=475,1350 Selected=0x42A639A8
-      DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=475,643 CentralNode=1 Selected=0xA259292F
+      DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=475,654 Selected=0x42A639A8
+      DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=475,384 CentralNode=1 Selected=0xA259292F
 
