--- a/CocoaEditor/imgui.ini
+++ b/CocoaEditor/imgui.ini
@@ -38,7 +38,7 @@ Size=1920,1080
 Collapsed=0
 
 [Window][Create New Project]
-Pos=318,204
+Pos=270,187
 Size=1083,522
 Collapsed=0
 
@@ -53,8 +53,18 @@ Pos=299,57
 Size=308,484
 Collapsed=0
 
+[Window][Styles]
+Pos=273,207
+Size=610,469
+Collapsed=0
+
+[Window][Settings]
+Pos=401,502
+Size=677,321
+Collapsed=0
+
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=808,387 Size=1920,1040 Split=X
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=439,393 Size=1920,1040 Split=X
   DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=3021,722 Split=Y Selected=0xAE7BB42F
     DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1443,1341 Selected=0xAE7BB42F
     DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1443,652 Selected=0x7E7D78B8
