--- a/CocoaEditor/imgui.ini
+++ b/CocoaEditor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1920,1080
+Size=3840,2035
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,19 +10,19 @@ Collapsed=0
 
 [Window][Game Viewport]
 Pos=0,40
-Size=1510,698
+Size=3021,1341
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Assets]
-Pos=0,740
-Size=1510,340
+Pos=0,1383
+Size=3021,652
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][ Scene]
-Pos=1512,696
-Size=408,384
+Pos=3023,1299
+Size=817,736
 Collapsed=0
 DockId=0x00000008,0
 
@@ -38,13 +38,14 @@ Size=1920,1080
 Collapsed=0
 
 [Window][Create New Project]
-Pos=270,187
+ViewportPos=1830,381
+ViewportId=0x644D7B11
 Size=1083,522
 Collapsed=0
 
 [Window][Inspector]
-Pos=1512,40
-Size=408,654
+Pos=3023,40
+Size=817,1257
 Collapsed=0
 DockId=0x00000007,0
 
@@ -53,24 +54,14 @@ Pos=299,57
 Size=308,484
 Collapsed=0
 
-[Window][Styles]
-Pos=273,207
-Size=610,469
-Collapsed=0
-
-[Window][Settings]
-Pos=401,502
-Size=677,321
-Collapsed=0
-
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=439,393 Size=1920,1040 Split=X
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,85 Size=3840,1995 Split=X
   DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=3021,722 Split=Y Selected=0xAE7BB42F
     DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1443,1341 Selected=0xAE7BB42F
     DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1443,652 Selected=0x7E7D78B8
   DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=817,722 Split=Y Selected=0xA259292F
     DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=475,1048 Selected=0x57F8A5EA
     DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=475,945 Split=Y Selected=0xA259292F
-      DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=475,654 Selected=0x42A639A8
-      DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=475,384 CentralNode=1 Selected=0xA259292F
+      DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=475,1257 Selected=0x42A639A8
+      DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=475,736 CentralNode=1 Selected=0xA259292F
 
