--- a/CocoaEditor/imgui.ini
+++ b/CocoaEditor/imgui.ini
@@ -54,7 +54,7 @@ Size=308,484
 Collapsed=0
 
 [Window][Settings]
-Pos=396,136
+Pos=854,402
 Size=900,600
 Collapsed=0
 
@@ -68,8 +68,13 @@ Pos=191,129
 Size=900,600
 Collapsed=0
 
+[Window][Dear ImGui Metrics]
+Pos=1105,187
+Size=604,496
+Collapsed=0
+
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=946,400 Size=1920,1040 Split=X
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=209,294 Size=1920,1040 Split=X
   DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=2923,722 Split=Y Selected=0xAE7BB42F
     DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1443,718 Selected=0xAE7BB42F
     DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1443,320 Selected=0x7E7D78B8
