--- a/CocoaEditor/imgui.ini
+++ b/CocoaEditor/imgui.ini
@@ -21,8 +21,8 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][ Scene]
-Pos=1463,696
-Size=457,384
+Pos=1463,490
+Size=457,590
 Collapsed=0
 DockId=0x00000008,0
 
@@ -44,7 +44,7 @@ Collapsed=0
 
 [Window][Inspector]
 Pos=1463,40
-Size=457,654
+Size=457,448
 Collapsed=0
 DockId=0x00000007,0
 
@@ -59,12 +59,14 @@ Size=900,600
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=503,64
-Size=550,680
+ViewportPos=606,460
+ViewportId=0xE927CF2F
+Size=1308,1025
 Collapsed=0
 
 [Window][Styles]
-Pos=191,129
+ViewportPos=235,489
+ViewportId=0xB1F6FFC3
 Size=900,600
 Collapsed=0
 
@@ -74,13 +76,13 @@ Size=604,496
 Collapsed=0
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=888,373 Size=1920,1040 Split=X
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=1169,377 Size=1920,1040 Split=X
   DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=2923,722 Split=Y Selected=0xAE7BB42F
     DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1443,718 Selected=0xAE7BB42F
     DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1443,320 Selected=0x7E7D78B8
   DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=915,722 Split=Y Selected=0xA259292F
     DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=475,1048 Selected=0x57F8A5EA
     DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=475,945 Split=Y Selected=0xA259292F
-      DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=475,654 Selected=0x42A639A8
-      DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=475,384 CentralNode=1 Selected=0xA259292F
+      DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=475,448 Selected=0x42A639A8
+      DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=475,590 CentralNode=1 Selected=0xA259292F
 
