Fix game viewport size issues

--- a/CocoaEditor/imgui.ini
+++ b/CocoaEditor/imgui.ini
@@ -9,20 +9,20 @@ Size=400,400
 Collapsed=0
 
 [Window][Game Viewport]
-Pos=619,40
-Size=2494,1448
+Pos=646,40
+Size=2467,1448
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Assets]
-Pos=619,1490
-Size=2494,545
+Pos=646,1490
+Size=2467,545
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][ Scene]
 Pos=0,40
-Size=617,1995
+Size=644,1995
 Collapsed=0
 DockId=0x00000003,0
 
@@ -65,8 +65,9 @@ Size=1308,1025
 Collapsed=0
 
 [Window][Styles]
-Pos=1548,157
-Size=1483,1327
+ViewportPos=392,544
+ViewportId=0xB1F6FFC3
+Size=1172,1218
 Collapsed=0
 
 [Window][Dear ImGui Metrics]
@@ -76,9 +77,9 @@ Collapsed=0
 
 [Docking][Data]
 DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,85 Size=3840,1995 Split=X
-  DockNode        ID=0x00000003 Parent=0x3BC79352 SizeRef=617,1040 Selected=0xA259292F
-  DockNode        ID=0x00000008 Parent=0x3BC79352 SizeRef=3221,1040 Split=X
-    DockNode      ID=0x00000001 Parent=0x00000008 SizeRef=2494,1995 Split=Y
+  DockNode        ID=0x00000003 Parent=0x3BC79352 SizeRef=644,1040 Selected=0xA259292F
+  DockNode        ID=0x00000008 Parent=0x3BC79352 SizeRef=3194,1040 Split=X
+    DockNode      ID=0x00000001 Parent=0x00000008 SizeRef=2467,1995 Split=Y
       DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=3840,754 Split=Y
         DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=475,1048 Selected=0x57F8A5EA
         DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=475,945 CentralNode=1 Selected=0xAE7BB42F
