--- a/CocoaEditor/imgui.ini
+++ b/CocoaEditor/imgui.ini
@@ -9,20 +9,20 @@ Size=400,400
 Collapsed=0
 
 [Window][Game Viewport]
-Pos=385,40
-Size=1171,754
+Pos=957,40
+Size=599,754
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x0000000A,0
 
 [Window][Assets]
-Pos=385,796
-Size=1171,284
+Pos=353,796
+Size=1203,284
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][ Scene]
 Pos=0,40
-Size=383,1040
+Size=351,1040
 Collapsed=0
 DockId=0x00000003,0
 
@@ -54,7 +54,7 @@ Size=308,484
 Collapsed=0
 
 [Window][Settings]
-Pos=986,400
+Pos=593,309
 Size=900,600
 Collapsed=0
 
@@ -75,14 +75,22 @@ Pos=1105,187
 Size=604,496
 Collapsed=0
 
+[Window][Game Editor Viewport]
+Pos=353,40
+Size=602,754
+Collapsed=0
+DockId=0x00000009,0
+
 [Docking][Data]
-DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=160,245 Size=1920,1040 Split=X
-  DockNode        ID=0x00000003 Parent=0x3BC79352 SizeRef=383,1040 Selected=0xA259292F
-  DockNode        ID=0x00000008 Parent=0x3BC79352 SizeRef=1535,1040 Split=X
-    DockNode      ID=0x00000001 Parent=0x00000008 SizeRef=1171,1995 Split=Y
-      DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=3840,754 Split=Y
-        DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=475,1048 Selected=0x57F8A5EA
-        DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=475,945 CentralNode=1 Selected=0xAE7BB42F
-      DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=3840,284 Selected=0x7E7D78B8
-    DockNode      ID=0x00000002 Parent=0x00000008 SizeRef=362,1995 Selected=0x42A639A8
+DockSpace           ID=0x3BC79352 Window=0x4647B76E Pos=209,294 Size=1920,1040 Split=X
+  DockNode          ID=0x00000003 Parent=0x3BC79352 SizeRef=351,1040 Selected=0xA259292F
+  DockNode          ID=0x00000008 Parent=0x3BC79352 SizeRef=1567,1040 Split=X
+    DockNode        ID=0x00000001 Parent=0x00000008 SizeRef=1203,1995 Split=Y
+      DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=3840,754 Split=Y
+        DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=475,1048 Selected=0x57F8A5EA
+        DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=475,945 Split=X Selected=0x6E2C89B8
+          DockNode  ID=0x00000009 Parent=0x00000006 SizeRef=602,754 CentralNode=1 Selected=0x6E2C89B8
+          DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=599,754 Selected=0xAE7BB42F
+      DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=3840,284 Selected=0x7E7D78B8
+    DockNode        ID=0x00000002 Parent=0x00000008 SizeRef=362,1995 Selected=0x42A639A8
 
